--- a/undervisningsopgaver/01_js_basics/03_godmorgen.html
+++ b/undervisningsopgaver/01_js_basics/03_godmorgen.html
@@ -16,11 +16,11 @@
 <body>
     <h2>Se i konsollen hvilken tid på dagen det er</h2>
     <script>
-        let today = new Date()
-        let curHr = today.getHours()
+        let today = new Date();
+        let curHr = today.getHours();
 
-        if (curHr < 5) {
-            console.log("Godnat!");
+        if (curHr > 5) {
+            console.log("Godmorgen!");
         } else if (curHr > 12) {
             console.log("Goddag!");
         } else {
