initial append, new article

--- a/undervisningsopgaver/02_js_DOM/05_testload.html
+++ b/undervisningsopgaver/02_js_DOM/05_testload.html
@@ -45,6 +45,7 @@
         width: 100vw;
         text-align: center;
     }
+
 </style>
 
 <body>
@@ -85,6 +86,8 @@
 
 
         function start() {
+
+            console.log(load);
 
             document.querySelector("article:nth-child(1) img").addEventListener("click", skiftBillede)
 
@@ -154,5 +157,8 @@
             billede1.setAttribute("alt", "ny alt tekst")
             console.log(billede1);
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
