--- a/undervisningsopgaver/01_js_basics/12_date.html
+++ b/undervisningsopgaver/01_js_basics/12_date.html
@@ -31,10 +31,12 @@
             let resultat = `Ved din alder ${dinAlder} er din nedre aldersgrænse for en date ${dinNedreAldersGraense} og øvre aldersgrænse ${dinOevreAldersGraense} - Ved din dates alder ${dateAlder} er den nedre aldersgrænse for en date ${datesNedreAldersGraense} og øvre aldersgrænse ${datesOevreAldersGraense}`;
 
 
-
             console.log(resultat);
 
 
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
