--- a/undervisningsopgaver/js-objekter/07_events.html
+++ b/undervisningsopgaver/js-objekter/07_events.html
@@ -67,38 +67,38 @@
 
         let film = [{
             "titel": "A Calling",
-            "instruktør": "Christian Bengtson | ",
-            "land": "Danmark | ",
-            "længde": "20 min | ",
-            "årstal": "2019 | ",
+            "instruktør": "Christian Bengtson",
+            "land": "Danmark",
+            "længde": "20 min",
+            "årstal": "2019",
             "billede": "https://odense-film-festival.s3.eu-central-1.amazonaws.com/media/W6dOqabNhHKBPXxxKKEZRA84-360.jpg"
         }, {
-            "titel": "A Hole In My Head | ",
-            "instruktør": "Mees Peijnenburg | ",
-            "land": "Holland | ",
-            "længde": "9 min | ",
-            "årstal": "2015 | ",
+            "titel": "A Hole In My Head",
+            "instruktør": "Mees Peijnenburg",
+            "land": "Holland",
+            "længde": "9 min",
+            "årstal": "2015",
             "billede": "https://odense-film-festival.s3.eu-central-1.amazonaws.com/media/Q8K1pZrOs03Q0IrDkBwGVu5r-360.jpg"
         }, {
             "titel": "A Place In The Sun - 110 year after the genocide",
-            "instruktør": "Christian Zipfel | ",
-            "land": "Tyskland | ",
-            "længde": "20 min | ",
-            "årstal": "2018 | ",
+            "instruktør": "Christian Zipfel",
+            "land": "Tyskland",
+            "længde": "20 min",
+            "årstal": "2018",
             "billede": "https://odense-film-festival.s3.eu-central-1.amazonaws.com/media/hUd4SdGQ8I23ovxWnGtBz4Ck-360.jpg"
         }, {
-            "titel": "A Tower of Two | ",
-            "instruktør": "Jacob Krzysxtof Glogowski | ",
-            "land": "Danmark | ",
-            "længde": "21 min | ",
-            "årstal": "2019 | ",
+            "titel": "A Tower of Two",
+            "instruktør": "Jacob Krzysxtof Glogowski",
+            "land": "Danmark",
+            "længde": "21 min",
+            "årstal": "2019",
             "billede": "https://odense-film-festival.s3.eu-central-1.amazonaws.com/media/Zdt2ODEqSVOkNe8nUaSSu8kd-360.jpg"
         }, {
-            "titel": "A Worthy Man | ",
-            "instruktør": "Kristian Håskjold | ",
-            "land": "Danmark | ",
-            "længde": "19 min | ",
-            "årstal": "2018 | ",
+            "titel": "A Worthy Man",
+            "instruktør": "Kristian Håskjold",
+            "land": "Danmark",
+            "længde": "19 min",
+            "årstal": "2018",
             "billede": "https://odense-film-festival.s3.eu-central-1.amazonaws.com/media/2iUOgQpixgIQCxyLtY6KiYuU-360.jpg"
         }];
 
@@ -118,7 +118,7 @@
             film.forEach(film => {
                 let klon = filmTemplate.cloneNode(true).content;
                 klon.querySelector("h3").textContent = film.titel;
-                klon.querySelector(".beskrivelse").textContent = `${film.instruktør} | ${film.land} | ${film.længde} | ${film.årstal}`;
+                klon.querySelector(".beskrivelse").textContent = `${film.instruktør} |  ${film.land} | ${film.længde} | ${film.årstal}`;
                 //                klon.querySelector(".instruktør").textContent = film.instruktør;
                 //                klon.querySelector(".land").textContent = film.land;
                 //                klon.querySelector(".længde").textContent = film.længde;
