--- a/bistro_babushka/bistro_babushka.html
+++ b/bistro_babushka/bistro_babushka.html
@@ -35,11 +35,12 @@
         padding: 10px;
         text-decoration: none;
         font-family: "courier new", serif;
+        box-shadow: 4px 4px 4px;
 
     }
 
     button:hover {
-        color: grey;
+        color: #bf7a7a;
     }
 
 
@@ -85,6 +86,11 @@
         text-align: center;
     }
 
+    .navn {
+        text-align: center;
+        font-size: 1.4rem;
+    }
+
 
     p {
         font-family: "Courier New", serif;
@@ -93,7 +99,8 @@
     }
 
     .billede {
-        width: 100%;
+        width: 90%;
+        margin: 5%;
 
     }
 
@@ -122,16 +129,19 @@
     </section>
     <template>
         <article class="ret">
+            <b>
+                <p class="navn"></p>
+            </b>
+            <img src="imgs/small/groggiroshorn-sm.jpg" alt="" class="billede">
             <p class="kategori">Kategori: </p>
-            <p class="navn">Navn: </p>
-            <p class="pris">Pris: </p>
+            <u>
+                <p class="pris">Pris: </p>
+            </u>
             <p class="kort">Kort: </p>
             <p class="lang">Lang: </p>
             <p class="oprindelse">Oprindelse: </p>
-            <img src="imgs/small/groggiroshorn-sm.jpg" alt="" class="billede">
         </article>
     </template>
-
 
     <script>
         let filter = "alle";
@@ -174,8 +184,6 @@
                 btn.addEventListener("click", filterBTNs);
             })
         }
-
-
 
         function filterBTNs() {
             filter = this.dataset.kategori;
