--- a/bistro_babushka/bistro_babushka.html
+++ b/bistro_babushka/bistro_babushka.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 
 <head>
     <meta charset="utf-8">
@@ -45,7 +45,7 @@
     }
 
     button:hover {
-        color: #bf7a7a;
+        color: #ff0000;
     }
 
 
@@ -75,6 +75,7 @@
         font-size: 10rem;
         color: red;
         text-shadow: 2px 2px 2px #900101;
+
 
 
     }
@@ -111,12 +112,38 @@
     }
 
     .valgt {
-        background-color: #5d5c5c;
+        background-color: rgb(195, 195, 195);
+    }
+
+    #splash {
+        max-width: none;
+        width: 100%;
+        height: 30vh;
+        background-image: url(https://thehill.com/sites/default/files/article_images/russia-kremlin-getty.jpg);
+        background-size: cover;
+        background-position: 48% 50%;
+    }
+
+    @media (max-width: 750px) {
+
+        h1 {
+            text-align: center;
+            font-family: "russian", serif;
+            font-size: 5rem;
+            color: red;
+            text-shadow: 2px 2px 2px #900101;
+
+
+
+        }
+
     }
 </style>
 
 <body>
-    <h1>BISTRO BABUSHKA</h1>
+    <div id=splash>
+        <h1>BISTRO BABUSHKA</h1>
+    </div>
     <header>
 
         <nav>
@@ -127,7 +154,6 @@
             <button class="filter" data-kategori="drikkevarer">Drikkevarer</button>
         </nav>
     </header>
-    <h2>Retter:</h2>
     <h3></h3>
     <section id="liste">
     </section>
