added a vlad. putin favicon for authenticity and lolz

--- a/bistro_babushka/bistro_babushka.html
+++ b/bistro_babushka/bistro_babushka.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bistro Babushka</title>
     <link rel="stylesheet" href="">
-    <link rel="icon" type="image/png" href="pics/Hammer_and_sickle.svg">
+    <link rel="icon" type="image/png" href="pics/putin.png">
 </head>
 
 <style>
@@ -202,7 +202,7 @@
             <button class="filter" data-kategori="drikkevarer">Drikkevarer</button>
         </nav>
     </header>
-    <h3></h3>
+    <h3>MENUKORT</h3>
     <section id="liste">
     </section>
     <main>
