single view popup plus making it look crisp

--- a/bistro_babushka/bistro_babushka.html
+++ b/bistro_babushka/bistro_babushka.html
@@ -166,8 +166,6 @@
         position: fixed;
         background-color: rgba(0, 0, 0, .8);
         display: none;
-        display: flex;
-        justify-content: center;
 
     }
 
@@ -255,7 +253,6 @@
         }
 
     }
-
 </style>
 
 <body>
@@ -395,8 +392,5 @@
             visRetter();
 
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
