--- a/bistro_babushka/bistro_babushka.html
+++ b/bistro_babushka/bistro_babushka.html
@@ -78,6 +78,7 @@
         border-radius: 6px;
         box-shadow: 3px 3px 3px rgba(114, 114, 114, 0.49);
 
+
     }
 
     main {
@@ -253,6 +254,7 @@
         }
 
     }
+
 </style>
 
 <body>
@@ -392,5 +394,8 @@
             visRetter();
 
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
